deleted accidental duplication of files